# rsfilc

./: .gitignore  Cargo.toml  LICENSE  README.hu.md  README.md  dist-workspace.toml
.github/workflows/: all-tests-slow.yml  build-artifacts-and-run-tests.yml  draft-release-automatic-trigger.yml  rust.yml
assets/: demo.cast  example-config.toml
ekreta/: Cargo.toml
ekreta/src/: consts.rs  endpoints.rs  lessons.rs  lib.rs  types.rs  user.rs
ekreta/src/endpoints/: absences.rs  announced_tests.rs  classes.rs  evaluations.rs  groups.rs  lessons.rs  messages.rs  schools.rs  token.rs  user_info.rs
rsfilc/: Cargo.toml  README.hu.md
rsfilc/src/: absences.rs  announced.rs  api_urls.rs  args.rs  cache.rs  config.rs  endpoints.rs  evals.rs  information.rs  lib.rs  main.rs  messages.rs  paths.rs  school_list.rs  schools.rs  tests.rs  time.rs  timetable.rs  user.rs
rsfilc/src/absences/: tests.rs
rsfilc/src/announced/: tests.rs
rsfilc/src/evals/: tests.rs
rsfilc/src/messages/: tests.rs
rsfilc/src/user/: tests.rs
rsfilc/tests/: basic.rs
src/: absences.rs  announced.rs  api.rs  api_urls.rs  args.rs  cache.rs  config.rs  endpoints.rs  evals.rs  html_renderer.rs  info.rs  information.rs  kreta_api.rs  lib.rs  main.rs  messages.rs  paths.rs  school_list.rs  schools.rs  tests.rs  time.rs  timetable.rs  token.rs  user.rs  utils.rs
src/announced/: tests.rs
src/api/: admin_endpoints.rs  endpoints.rs
src/evals/: tests.rs
src/messages/: tests.rs
src/timetable/: tests.rs
src/user/: tests.rs
tests/: basic.rs
