[package]
name = "rsfilc"
version = "0.9.38"
description = "An E-Kréta console client: cli and todo!(\"TUI\"), written entirely in Rust from the ground up."
keywords = ["kreta", "client", "hungarian"]
categories = ["command-line-interface"]
edition = "2021"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
repository = "https://codeberg.org/jark/rsfilc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekreta = "0.2.4"
base64 = "0.22.1"
chrono = { version = "0.4.40", default-features = false }
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.26"
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
confy = "0.6.1"
nanohtml2text = "0.2.1"
