[package]
name = "rsfilc"
version = "0.11.15"
description = "An E-Kréta console client: cli and todo!(\"TUI\"), written entirely in Rust from the ground up."
keywords = ["kreta", "client", "hungarian"]
categories = ["command-line-interface"]
edition = "2021"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
repository = "https://codeberg.org/jark/rsfilc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekreta = "0.3.6"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.39", features = ["derive", "env"] }
clap_complete = "4.5.50"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
confy = "1.0.0"
nanohtml2text = "0.2.1"
ascii_table = { version = "4.0.6", features = ["auto_table_width", "color_codes"] }
inquire = { version = "0.7.5", default-features = false, features = [
  "console",
] }
yansi = "1.0.1"
