[package]
name = "ekreta"
version = "0.1.0"
description = "E-Kréta API"
keywords = ["kreta", "api", "hungarian"]
categories = ["api-bindings"]
documentation = "https://docs.rs/ekreta"
edition = "2021"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
repository = "https://codeberg.org/jark/rsfilc"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["clock", "now", "serde", "std"], default-features = false }
http = "1.2.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
