[package]
name = "rsfilc"
version = "0.8.16"
description = "An E-Kréta console client: cli and todo!(\"TUI\"), written entirely in Rust from the ground up."
keywords = ["kreta", "client", "hungarian"]
categories = ["command-line-interface"]
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
dirs = "5.0.1"
fern = "0.6.2"
log = "0.4.21"
reqwest = { version = "0.12.1", default-features = false, features = [
  "blocking",
  "rustls-tls-native-roots",
  "cookies",
  "json",
] }
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.12"
scraper = { version = "0.22.0", default-features = false }
